<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AuthorizationFragment"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/Hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="120dp"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/Hello"
        android:textAppearance="@style/welcome_bac"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/Explanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/Explanation"
        android:textAppearance="@style/enter_your_"
        android:textSize="16sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginVertical="28dp"
        android:orientation="vertical"
        app:startIconDrawable="@drawable/vector">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_or_us"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/email_or_us"
            android:textAppearance="@style/email_or_us"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/containerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginBottom="28dp"
        app:startIconDrawable="@drawable/castle"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/password"
            android:textColorHint="#546E7A"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/Forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="24dp"
        android:text="@string/forgot_password"
        android:textColor="@color/LogInText"
        android:textSize="12sp" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/Log_in"
        android:paddingVertical="15dp"
        android:text="@string/Log_in"
        android:textColor="@color/LogInText"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/black"
        android:paddingHorizontal="97dp"
        android:paddingVertical="15dp"
        android:text="@string/Register"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/No_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="68dp"
        android:text="@string/No_account"
        android:textColor="@color/LogInText"
        android:textSize="14sp" />
</LinearLayout>