<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WebsiteFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="12dp" />
    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sora_semibold"

        android:textColor="@color/frame"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/back"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        />


    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_reply_24"
        app:layout_constraintEnd_toStartOf="@id/guidelineEnd"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        tools:layout_editor_absoluteX="358dp"
        tools:layout_editor_absoluteY="16dp" />

    <View
        android:id="@+id/line"
        android:layout_width="415dp"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DIRECTIONS" />

    <View
        android:id="@+id/square"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/_1"
        app:layout_constraintEnd_toStartOf="@+id/square2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <View
        android:id="@+id/square3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/square2"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <View
        android:id="@+id/square2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/_2"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toStartOf="@+id/square3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/square"
        app:layout_constraintTop_toBottomOf="@+id/line"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view13"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/k_1"
        app:layout_constraintEnd_toStartOf="@+id/view16"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <View
        android:id="@+id/view16"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/k_2"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toStartOf="@+id/view14"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view13"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view14"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/k_3"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toStartOf="@+id/view15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view16"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view15"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/k_4"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toStartOf="@+id/view17"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view14"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view17"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/k_5"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toStartOf="@+id/view18"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view15"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view18"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/k_6"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view17"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/DIRECTIONS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/directions"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/CALL"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/view13"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/CALL"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/call"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toStartOf="@+id/SAVE"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/DIRECTIONS"
        app:layout_constraintTop_toBottomOf="@+id/view16"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/SAVE"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="71dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toStartOf="@+id/WEBSITE"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/CALL"
        app:layout_constraintTop_toBottomOf="@+id/view15"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/WEBSITE"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24.3dp"
        android:layout_marginTop="71dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/website"
        android:textColor="@color/blue"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/SAVE"
        app:layout_constraintTop_toBottomOf="@+id/view18"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/Personal_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:fontFamily="@font/sora_semibold"
        android:text="@string/personal_page"
        android:textColor="@color/frame"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/sora_semibold"
        android:text="@string/username"
        android:textColor="@color/frame"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/sora_light"
        android:text="@string/address"
        android:textColor="@color/frame"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/Username" />


    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sora_light"
        android:text="@string/description"
        android:textColor="@color/frame"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/Address"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/Following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/sora_light"
        android:lineHeight="17.64dp"
        android:text="@string/following"
        android:textColor="@color/frame"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/Followers"
        app:layout_constraintTop_toBottomOf="@+id/number_22" />

    <TextView
        android:id="@+id/Posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/sora_light"
        android:lineHeight="17.64dp"
        android:text="@string/posts"
        android:textColor="@color/frame"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/number_125" />

    <TextView
        android:id="@+id/Followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/sora_light"
        android:lineHeight="17.64dp"
        android:text="@string/followers"
        android:textColor="@color/frame"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/Posts"
        app:layout_constraintTop_toBottomOf="@+id/number_20K" />

    <TextView
        android:id="@+id/number_125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="107dp"
        android:fontFamily="@font/sora_light"
        android:lineHeight="17.64dp"
        android:text="@string/_125"
        android:textColor="@color/frame"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="107dp"
        android:fontFamily="@font/sora_light"
        android:lineHeight="17.64dp"
        android:text="@string/_22"
        android:textColor="@color/frame"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/number_20K"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_20K"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="107dp"
        android:fontFamily="@font/sora_light"
        android:lineHeight="17.64dp"
        android:text="@string/_20k"
        android:textColor="@color/frame"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/number_125"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="86dp"
        android:src="@drawable/baseline_circle_24"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="15.67dp"
        android:src="@drawable/avatar"

        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/coll_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/baseline_local_phone_24"
        app:layout_constraintBottom_toTopOf="@+id/CALL"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/linkWebsite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/baseline_link_24"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintBottom_toTopOf="@+id/WEBSITE"
        tools:layout_editor_absoluteX="348dp" />

    <ImageView
        android:id="@+id/Star"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/baseline_star_24"
        app:layout_constraintBottom_toTopOf="@+id/SAVE"
        app:layout_constraintStart_toEndOf="@+id/coll_icon" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:src="@drawable/baseline_directions_24"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintBottom_toTopOf="@+id/DIRECTIONS"
        tools:layout_editor_absoluteX="41dp" />


</androidx.constraintlayout.widget.ConstraintLayout>